--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ClipperLib",
+  "name": "clipper-lib",
   "version": "6.1.3.2",
   "description": "Boolean operations and offsetting library in Javascript",
   "files": [
     "clipper.js"
   ],
   "main": "clipper",
-  "repository": "git://github.com/junmer/ClipperLib",
+  "repository": "git://github.com/junmer/clipper-lib",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,5 +14,5 @@
     "name": "junmer",
     "email": "junmer@foxmail.com"
   }],
-  "license": "http://www.boost.org/LICENSE_1_0.txt"
+  "license": "BSL"
 }
