--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
   "main": "clipper",
   "repository": "git://github.com/junmer/clipper-lib",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/unitarytests.js",
+    "watchify": "watchify draw/index.js -o draw/bundle.js -v"
   },
-  "author": ["Angus Johnson (Original library)", "Timo (Translation to JS)", "junmer"],
-  "license": "BSL"
+  "author": [
+    "Angus Johnson (Original library)",
+    "Timo (Translation to JS)",
+    "junmer"
+  ],
+  "license": "BSL",
+  "dependencies": {
+    "browserify": "^14.3.0",
+    "expect.js": "^0.3.1",
+    "mocha": "^3.3.0",
+    "mocha-each": "^1.1.0",
+    "watchify": "^3.9.0"
+  }
 }
