--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "main": "clipper",
   "repository": "git://github.com/junmer/clipper-lib",
   "scripts": {
-    "test": "mocha tests/unitarytests.js",
-    "watchify": "watchify draw/index.js -o draw/bundle.js -v"
+    "compile": "browserify helper/index.js -o compiled-helper/bundle.js -t [ babelify --presets [ es2015 ] ] -s holes",
+    "compiledraw": "browserify tests/draw-helper/index.js -o tests/draw-helper/bundle.js -s draw",
+    "test": "npm run compile && mocha tests/unitarytests.js",
+    "watchify": "watchify helper/index.js -o compiled-helper/bundle.js -v"
   },
   "author": [
     "Angus Johnson (Original library)",
@@ -18,8 +20,12 @@
   ],
   "license": "BSL",
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "expect.js": "^0.3.1",
+    "lodash": "^4.17.4",
     "mocha": "^3.3.0",
     "mocha-each": "^1.1.0",
     "watchify": "^3.9.0"
