--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clipper-lib",
-  "version": "6.2.1",
+  "version": "6.4.2",
   "description": "Boolean operations and offsetting library in Javascript",
   "files": [
     "clipper.js"
@@ -10,6 +10,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": ["Angus Johnson (Original library)", "Timo (Translation to JS)", "junmer"],
+  "author": ["Angus Johnson (Original library)", "Timo (Translation to JS)"],
   "license": "BSL"
 }
